Resolve semtype in SymbolEnter